--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
   font-size: 15px;
+  overflow: auto;
 }
 
 #header {
@@ -10,4 +11,10 @@
   width: 100%;
   font-size: 30px;
   font-weight: bold;
+}
+
+@media only screen and (max-width: 600px) {
+  .App {
+    font-size: 20px;
+  }
 }
